--- a/utils/Options.cfg
+++ b/utils/Options.cfg
@@ -41,7 +41,7 @@
     [checkbox]
         id=nfw_05
         name=_"Elementals"
-        description=_"Add transformations to elemental as a possibility to the table."
+        description=_"Add transformation to elemental as a possibility to the table."
         default=no
     [/checkbox]
 
