--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -164,7 +164,9 @@
 			[or]
 				{EVENT_SECOND_UNIT}
 			[/or]
-			trait=nfw_elemental_water
+			[and]
+				trait=nfw_elemental_water
+			[/and]
 		[/have_unit]
     [/filter_condition]
 
@@ -174,7 +176,9 @@
 			[or]
 				{EVENT_SECOND_UNIT}
 			[/or]
-			trait=nfw_elemental_water
+			[and]
+				trait=nfw_elemental_water
+			[/and]
 		[/filter]
 		[effect]
 			apply_to=hitpoints
@@ -218,7 +222,9 @@
 			[or]
 				{EVENT_SECOND_UNIT}
 			[/or]
-			trait=nfw_elemental_fire
+			[and]
+				trait=nfw_elemental_fire
+			[/and]
 		[/have_unit]
     [/filter_condition]
 
@@ -228,7 +234,9 @@
 			[or]
 				{EVENT_SECOND_UNIT}
 			[/or]
-			trait=nfw_elemental_fire
+			[and]
+				trait=nfw_elemental_fire
+			[/and]
 		[/filter]
 		[effect]
 			apply_to=hitpoints
@@ -272,7 +280,9 @@
 			[or]
 				{EVENT_SECOND_UNIT}
 			[/or]
-			trait=nfw_elemental_earth
+			[and]
+				trait=nfw_elemental_earth
+			[/and]
 		[/have_unit]
     [/filter_condition]
 
@@ -282,7 +292,9 @@
 			[or]
 				{EVENT_SECOND_UNIT}
 			[/or]
-			trait=nfw_elemental_earth
+			[and]
+				trait=nfw_elemental_earth
+			[/and]
 		[/filter]
 		[effect]
 			apply_to=hitpoints
@@ -326,7 +338,9 @@
 			[or]
 				{EVENT_SECOND_UNIT}
 			[/or]
-			trait=nfw_elemental_arcane
+			[and]
+				trait=nfw_elemental_arcane
+			[/and]
 		[/have_unit]
     [/filter_condition]
 
@@ -336,7 +350,9 @@
 			[or]
 				{EVENT_SECOND_UNIT}
 			[/or]
-			trait=nfw_elemental_arcane
+			[and]
+				trait=nfw_elemental_arcane
+			[/and]
 		[/filter]
 		[effect]
 			apply_to=hitpoints
@@ -380,7 +396,9 @@
 			[or]
 				{EVENT_SECOND_UNIT}
 			[/or]
-			trait=nfw_elemental_air
+			[and]
+				trait=nfw_elemental_air
+			[/and]
 		[/have_unit]
     [/filter_condition]
 
@@ -390,7 +408,9 @@
 			[or]
 				{EVENT_SECOND_UNIT}
 			[/or]
-			trait=nfw_elemental_air
+			[and]
+				trait=nfw_elemental_air
+			[/and]
 		[/filter]
 		[effect]
 			apply_to=hitpoints
