--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1242,7 +1242,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
                     special_type=heal_on_hit
                 [/not]
                 [not]
-                    type=cold,fire
+                    type=cold,fire,arcane
                 [/not]
                 set_type=arcane
                 set_description=_"spectral $unit.attack[0].description"
@@ -1269,7 +1269,7 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
                 [not]
                     type=arcane,fire,cold
                 [/not]
-                set_type=arcane
+                set_type=cold
                 set_description=_"spectral $unit.attack[$($unit.attack.length - 1)].description"
                 set_icon=$unit.attack[$($unit.attack.length - 1)].icon
             [/effect]
