--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -4,6 +4,23 @@
 
 #To show different variables on help menu
 
+#define NFW_MENU_EXIT
+	[option]
+		label="<b>»</b> "+_"Back to help menu"
+		default=yes
+		[command]
+			[fire_event]
+				name=nfw_help_menu
+			[/fire_event]
+		[/command]
+	[/option]
+	[option]
+		label="<b>"+_"Exit"+"</b>"
+		[command]
+		[/command]
+	[/option]
+#enddef
+
 #define NFW_WOUNDS STATUS
     [message]
         speaker=narrator
@@ -47,20 +64,7 @@
 * <i>Lost</i> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
                     side_for=$side_number
                     image="units/human-loyalists/duelist-die5.png"
-                    [option]
-                        label="<b>»</b> "+_"Back to help menu"
-                        default=yes
-                        [command]
-                            [fire_event]
-                                name=nfw_help_menu
-                            [/fire_event]
-                        [/command]
-                    [/option]
-                    [option]
-                        label="<b>"+_"Exit"+"</b>"
-                        [command]
-                        [/command]
-                    [/option]
+					{NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
@@ -83,20 +87,7 @@
 * Optional wounds can't be healed at all."
                     side_for=$side_number
                     image="units/human-loyalists/duelist-die5.png"
-                    [option]
-                        label="<b>»</b> "+_"Back to help menu"
-                        default=yes
-                        [command]
-                            [fire_event]
-                                name=nfw_help_menu
-                            [/fire_event]
-                        [/command]
-                    [/option]
-                    [option]
-                        label="<b>"+_"Exit"+"</b>"
-                        [command]
-                        [/command]
-                    [/option]
+					{NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
@@ -134,37 +125,11 @@
                             [/set_variable]
                         [/command]
                     [/option]
-                    [option]
-                        label="<b>»</b> "+_"Back to help menu"
-                        default=yes
-                        [command]
-                            [fire_event]
-                                name=nfw_help_menu
-                            [/fire_event]
-                        [/command]
-                    [/option]
-                    [option]
-                        label="<b>"+_"Exit"+"</b>"
-                        [command]
-                        [/command]
-                    [/option]
+					{NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
-        [option]
-            label="<b>»</b> "+_"Back to help menu"
-            default=yes
-            [command]
-                [fire_event]
-                    name=nfw_help_menu
-                [/fire_event]
-            [/command]
-        [/option]
-        [option]
-            label="<b>"+_"Exit"+"</b>"
-            [command]
-            [/command]
-        [/option]
+		{NFW_MENU_EXIT}
     [/message]
 #enddef
 
@@ -215,58 +180,40 @@
                             [/set_variable]
                         [/command]
                     [/option]
-                    [option]
-                        label="<b>»</b> "+_"Back to help menu"
-                        default=yes
-                        [command]
-                            [fire_event]
-                                name=nfw_help_menu
-                            [/fire_event]
-                        [/command]
-                    [/option]
-                    [option]
-                        label="<b>"+_"Exit"+"</b>"
-                        [command]
-                        [/command]
-                    [/option]
+					{NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
-        [option]
-            label="<b>»</b> "+_"Back to help menu"
-            default=yes
-            [command]
-                [fire_event]
-                    name=nfw_help_menu
-                [/fire_event]
-            [/command]
-        [/option]
-        [option]
-            label="<b>"+_"Exit"+"</b>"
-            [command]
-            [/command]
-        [/option]
+		{NFW_MENU_EXIT}
     [/message]
 #enddef
 
 #define NFW_ELEMENTAL STATUS
     [message]
         speaker=narrator
-        message="<b>"+_"Elementals"+" → "+"</b>"+_"Add transformations to elemental as a possibility to the table."+"
+        message="<b>"+_"Elementals"+" → "+"</b>"+_"Add transformation to elemental as a possibility to the table."+"
 
-"+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
-
-"+_"* <b><i>Wound</i> +Buffs -Debuffs > Possible units and conditions = Healing method</b>
-* <i>Fire elemental</i> +30% fire resistance +All attacks changed to fire -20% damage -30% HP > Units with fire attacks, or wounded with fire, or on a terrain with lava or fire = 4 HP when either the attacker or defender are in a terrain with fire or lava, once per attack
-* <i>Water elemental</i> +30% cold resistance +All attacks changed to cold and have slow ability -40% damage -40% HP > Units with cold attacks, or wounded with cold, or on a terrain with water or cold = 2 HP when either the attacker or defender are in a terrain with water, once per attack
-* <i>Poison elemental</i> +30% pierce resistance +All attacks changed to pierce -30% damage -40% HP > Units with pierce or poison attacks, or wounded with pierce or poison = 8 HP when attacked with poison, only on defense, once per attack
-* <i>Arcane elemental</i> +30% arcane resistance +All attacks changed to arcane -25% damage -25% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss
-* <i>Earth elemental</i> +30% impact resistance +All attacks changed to impact -20% damage -25% HP -10% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain
-* <i>Air elemental</i> +30% blade +20% pierce +20% impact resistance +All attacks changed to blade -30% damage -50% HP > Units with blade attacks, or wounded with blade, or on a terrain with windmill = 8 HP when either the attacker or defender are in a terrain with windmill
-* <i>All elementals</i> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice"
-
+"+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"
         side_for=$side_number
         image="units/human-loyalists/duelist-die5.png"
+        [option]
+            label="<b>»</b> "+_"List of elemental transformations"
+            [command]
+                [message]
+                    speaker=narrator
+                    message=_"* <b><i>Wound</i> +Buffs -Debuffs > Possible units and conditions = Healing method</b>
+* <b><i>Fire elemental</i></b> +30% fire resistance +All attacks changed to fire -20% damage -30% HP > Units with fire attacks, or wounded with fire, or on a terrain with lava or fire = 4 HP when either the attacker or defender are in a terrain with fire or lava, once per attack
+* <b><i>Water elemental</i></b> +30% cold resistance +All attacks changed to cold and have slow ability -40% damage -40% HP > Units with cold attacks, or nagas and mermans, or wounded with cold, or on a terrain with water or cold = 2 HP when either the attacker or defender are in a terrain with water, once per attack
+* <b><i>Poison elemental</i></b> +30% pierce resistance +All attacks changed to pierce with poison -30% damage -40% HP > Units with pierce or poison attacks, or wounded with pierce or poison = 8 HP when attacked with poison, only on defense, once per attack
+* <b><i>Arcane elemental</i></b> +30% arcane resistance +All attacks changed to arcane -25% damage -25% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
+* <b><i>Earth elemental</i></b> +30% impact resistance +All attacks changed to impact -20% damage -25% HP -10% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
+* <b><i>Air elemental</i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade -30% damage -50% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
+* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice"
+                    image="units/human-loyalists/duelist-die5.png"
+					{NFW_MENU_EXIT}
+                [/message]
+            [/command]
+        [/option]
         [option]
             label="<b>»</b> "+_"Change status of Elementals"
             [command]
@@ -292,37 +239,11 @@
                             [/set_variable]
                         [/command]
                     [/option]
-                    [option]
-                        label="<b>»</b> "+_"Back to help menu"
-                        default=yes
-                        [command]
-                            [fire_event]
-                                name=nfw_help_menu
-                            [/fire_event]
-                        [/command]
-                    [/option]
-                    [option]
-                        label="<b>"+_"Exit"+"</b>"
-                        [command]
-                        [/command]
-                    [/option]
+					{NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
-        [option]
-            label="<b>»</b> "+_"Back to help menu"
-            default=yes
-            [command]
-                [fire_event]
-                    name=nfw_help_menu
-                [/fire_event]
-            [/command]
-        [/option]
-        [option]
-            label="<b>"+_"Exit"+"</b>"
-            [command]
-            [/command]
-        [/option]
+		{NFW_MENU_EXIT}
     [/message]
 #enddef
 
@@ -363,37 +284,11 @@
                             [/set_variable]
                         [/command]
                     [/option]
-                    [option]
-                        label="<b>»</b> "+_"Back to help menu"
-                        default=yes
-                        [command]
-                            [fire_event]
-                                name=nfw_help_menu
-                            [/fire_event]
-                        [/command]
-                    [/option]
-                    [option]
-                        label="<b>"+_"Exit"+"</b>"
-                        [command]
-                        [/command]
-                    [/option]
+					{NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
-        [option]
-            label="<b>»</b> "+_"Back to help menu"
-            default=yes
-            [command]
-                [fire_event]
-                    name=nfw_help_menu
-                [/fire_event]
-            [/command]
-        [/option]
-        [option]
-            label="<b>"+_"Exit"+"</b>"
-            [command]
-            [/command]
-        [/option]
+		{NFW_MENU_EXIT}
     [/message]
 #enddef
 
@@ -468,20 +363,7 @@
                             [/fire_event]
                         [/command]
                     [/option]
-                    [option]
-                        label="<b>»</b> "+_"Back to help menu"
-                        default=yes
-                        [command]
-                            [fire_event]
-                                name=nfw_help_menu
-                            [/fire_event]
-                        [/command]
-                    [/option]
-                    [option]
-                        label="<b>"+_"Exit"+"</b>"
-                        [command]
-                        [/command]
-                    [/option]
+					{NFW_MENU_EXIT}
                 [/message]
             [/command]
         [/option]
