Undead variations filtered too

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -166,94 +166,15 @@
             [/if]
         [/case]
         [case]
-            value=2,3,69
+            value=2,3,69,119
             [if]
-                [not]
-                    [have_location]
-                        {EVENT_UNIT}
-                        [filter]
-                            race=mechanical
-                        [/filter]
-                    [/have_location]
-                [/not]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						race=mechanical
+					[/filter]
+				[/have_location]
                 [then]
-                    [if]
-                        [have_location]
-                            {EVENT_UNIT}
-                            terrain=W*,S*
-                        [/have_location]
-                        [then]
-                            {NFW_fear_of_water_WOUND}
-                        [/then]
-
-                        [elseif]
-                            [have_location]
-                                {EVENT_UNIT}
-                                terrain=A*,D*
-                            [/have_location]
-                            [then]
-                                {NFW_fear_of_desert_WOUND}
-                            [/then]
-                        [/elseif]
-                        [elseif]
-                            [have_location]
-                                {EVENT_UNIT}
-                                terrain=U*
-                            [/have_location]
-                            [then]
-                                {NFW_fear_of_cave_WOUND}
-                            [/then]
-                        [/elseif]
-                        [elseif]
-                            [have_location]
-                                {EVENT_UNIT}
-                                terrain=F*,T*
-                            [/have_location]
-                            [then]
-                                {NFW_fear_of_plant_WOUND}
-                            [/then]
-                        [/elseif]
-                        [elseif]
-                            [have_location]
-                                {EVENT_UNIT}
-                                terrain=M*,H*
-                            [/have_location]
-                            [then]
-                                {NFW_fear_of_hight_WOUND}
-                            [/then]
-                        [/elseif]
-                        [elseif]
-                            [have_location]
-                                {EVENT_UNIT}
-                                terrain=G*,R*
-                            [/have_location]
-                            [and]
-                                [not]
-                                    [have_location]
-                                        {EVENT_UNIT}
-                                        terrain=*^V*,*^P*,*^E*,*^F*,*^T*,*^B*
-                                    [/have_location]
-                                [/not]
-                            [/and]
-                            [then]
-                                {NFW_fear_of_open_WOUND}
-                            [/then]
-                        [/elseif]
-
-                        [else]
-                            [fire_event]
-                                name=nfwe_rand_wound
-                                [primary_unit]
-                                    {EVENT_UNIT}
-                                [/primary_unit]
-                                [secondary_unit]
-                                    {EVENT_SECOND_UNIT}
-                                [/secondary_unit]
-                            [/fire_event]
-                        [/else]
-                    [/if]
-                [/then]
-                [else]
                     [fire_event]
                         name=nfwe_rand_wound
                         [primary_unit]
@@ -263,7 +184,80 @@
                             {EVENT_SECOND_UNIT}
                         [/secondary_unit]
                     [/fire_event]
-                [/else]
+				[/then]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=W*,S*
+					[/have_location]
+					[then]
+						{NFW_fear_of_water_WOUND}
+					[/then]
+				[/elseif]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=A*,D*
+					[/have_location]
+					[then]
+						{NFW_fear_of_desert_WOUND}
+					[/then]
+				[/elseif]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=U*
+					[/have_location]
+					[then]
+						{NFW_fear_of_cave_WOUND}
+					[/then]
+				[/elseif]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=F*,T*
+					[/have_location]
+					[then]
+						{NFW_fear_of_plant_WOUND}
+					[/then]
+				[/elseif]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=M*,H*
+					[/have_location]
+					[then]
+						{NFW_fear_of_hight_WOUND}
+					[/then]
+				[/elseif]
+				[elseif]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=G*,R*
+					[/have_location]
+					[and]
+						[not]
+							[have_location]
+								{EVENT_UNIT}
+								terrain=*^V*,*^P*,*^E*,*^F*,*^T*,*^B*
+							[/have_location]
+						[/not]
+					[/and]
+					[then]
+						{NFW_fear_of_open_WOUND}
+					[/then]
+				[/elseif]
+				[else]
+					[fire_event]
+						name=nfwe_rand_wound
+						[primary_unit]
+							{EVENT_UNIT}
+						[/primary_unit]
+						[secondary_unit]
+							{EVENT_SECOND_UNIT}
+						[/secondary_unit]
+					[/fire_event]
+				[/else]
             [/if]
         [/case]
         [case]
@@ -415,6 +409,12 @@
                     {EVENT_UNIT}
                     [filter]
                         race=horse,monster,wolf,bats,falcon,gryphon,bird
+						[or]
+							type=SotA Soulless_Bat,SotA Flying Corpse_Bat
+						[/or]
+						[or]
+							variation=bat,falcon,gryphon,bird,horse,rat,spider,serpent,boar,wolf
+						[/or]
                     [/filter]
                 [/have_location]
                 [or]
@@ -443,6 +443,12 @@
                     {EVENT_UNIT}
                     [filter]
                         race=bats,falcon,gryphon,drake,bird
+						[or]
+							type=SotA Soulless_Bat,SotA Flying Corpse_Bat
+						[/or]
+						[or]
+							variation=bat,drake,falcon,gryphon,bird
+						[/or]
                     [/filter]
                 [/have_location]
                 [and]
@@ -476,6 +482,12 @@
                     {EVENT_UNIT}
                     [filter]
                         race=bats,falcon,gryphon,naga,merman,bird
+						[or]
+							type=SotA Soulless_Bat,SotA Flying Corpse_Bat
+						[/or]
+						[or]
+							variation=bat,drake,falcon,gryphon,swimmer,bird
+						[/or]
                     [/filter]
                 [/have_location]
                 [or]
@@ -506,7 +518,7 @@
             [/if]
         [/case]
         [case]
-            value=116,117,118,119
+            value=116,117,118
             [if]
                 {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals impact}
                 [and]
@@ -659,7 +671,7 @@
             [/if]
         [/case]
         [case]
-            value=101,102,103,104,105
+            value=101,102,103,104,105,132
             [if]
                 [have_location]
                     {EVENT_UNIT}
@@ -768,7 +780,7 @@
             [/if]
         [/case]
         [case]
-            value=23,121,122
+            value=23,121,122,131
             [if]
                 [have_location]
                     {EVENT_UNIT}
@@ -822,7 +834,7 @@
             [/if]
         [/case]
         [case]
-            value=124,125,126,127,128
+            value=47,124,125,126,127,128
             [if]
                 [have_location]
                     {EVENT_UNIT}
@@ -882,7 +894,7 @@
             [/if]
         [/case]
         [case]
-            value=27,67,129,130,131,132
+            value=27,67,129,130
             [if]
                 [have_location]
                     {EVENT_UNIT}
@@ -973,7 +985,7 @@
             [/if]
         [/case]
         [case]
-            value=38,39,40,41,42,43,44,45,46,47
+            value=38,39,40,41,42,43,44,45,46
             [if]
                 {NFW_undead_ENABLED}
                 [and]
