--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -99,3 +99,27 @@
         [/have_location]
     [/or]
 #enddef
+
+#define NFW_CATCH_LAST_BREATH
+    [filter]
+        [not]
+            id=$nfw_exclude_unit_id
+        [/not]
+    [/filter]
+
+    [fire_event]
+        name=nfw_dialogue_on_death
+        [primary_unit]
+            id=$unit.id
+        [/primary_unit]
+    [/fire_event]
+
+    [store_unit]
+        [filter]
+            {EVENT_UNIT}
+        [/filter]
+        mode=append
+        variable=nfw_wounded
+        kill=no
+    [/store_unit]
+#enddef
