--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -4,17 +4,13 @@
     name=last_breath
     id=nfwme_death_filter
     first_time_only=no
-    [filter_condition]
-        [have_location]
-            {EVENT_UNIT}
-            [filter]
-                id=Wesfolk Leader,Lady Outlaw
-            [/filter]
-        [/have_location]
-    [/filter_condition]
+#ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
+	[filter]
+		id=Wesfolk Leader,Lady Outlaw
+	[/filter]
+
     [switch]
         variable=nfw_current_scenario_id
-#ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
         [case]
             value=02_The_Fall
             [if]
@@ -26,16 +22,28 @@
                     {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFW_COLOR_RED}}
                 [/else]
             [/if]
-            {VARIABLE nfwe_already_dead yes}
+            {VARIABLE nfw_already_dead yes}
             {VARIABLE nfw_exclude_unit_id "Lady Outlaw,Wesfolk Leader"}
         [/case]
         [else]
             {NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Escape" {NFW_COLOR_RED}}
-            {VARIABLE nfwe_already_dead yes}
+            {VARIABLE nfw_already_dead yes}
             {VARIABLE nfw_exclude_unit_id "Lady Outlaw"}
         [/else]
-#endif
     [/switch]
+#endif
+#ifdef CAMPAIGN_SON_OF_THE_BLACK_EYE
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 08_Silent_Forest}
+		{VARIABLE_CONDITIONAL nfw_first_death not_equals yes}
+    [/filter_condition]
+	[filter]
+		side=2,3
+	[/filter]
+	{VARIABLE nfw_first_death yes}
+	{VARIABLE nfw_already_dead yes}
+	{NFW_FLOAT_TEXT_CURRENT_SIDE_UNIT _"Execution" {NFW_COLOR_RED}}
+#endif
 [/event]
 
 #filter plagueable plagued units
@@ -66,7 +74,7 @@
         special_type=plague
     [/filter_second_attack]
     {NFW_plagued_WOUND}
-    {VARIABLE nfwe_already_dead yes}
+    {VARIABLE nfw_already_dead yes}
 [/event]
 
 #filter forced plagued for some scenarios
@@ -90,7 +98,7 @@
         [/not]
     [/filter]
     {NFW_plagued_WOUND}
-    {VARIABLE nfwe_already_dead yes}
+    {VARIABLE nfw_already_dead yes}
 [/event]
 
 #random wound table
@@ -103,7 +111,7 @@
     {VARIABLE nfwme_rand_weapon_type $second_weapon.type}
 
     [if]
-        {VARIABLE_CONDITIONAL nfwe_already_dead equals yes}
+        {VARIABLE_CONDITIONAL nfw_already_dead equals yes}
         [or]
             {NFW_wounds_DISABLED}
         [/or]
@@ -111,7 +119,7 @@
             {NFW_wounds_DISABLED_with_plague}
         [/or]
         [then]
-            {CLEAR_VARIABLE nfwe_already_dead}
+            {CLEAR_VARIABLE nfw_already_dead}
         [/then]
         [else]
             [store_unit_type]
