--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -138,7 +138,8 @@
         speaker=narrator
         message="<b>"+_"Activate Death"+" → "+"</b>"+_"Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."+" "+_"Only applies with Wounds enabled."+"
 
-"+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"        "+_"(0 = Deactivated, 1 = Death, 2 = Death + Undeath)"+"
+"+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
+ "+_"(0 = Deactivated, 1 = Death, 2 = Death + Undeath)"+"
 
 "+_"<b>Wounds list:</b>
 * <i>Death</i> (definitive death)
