--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -35,6 +35,7 @@
 [event]
     name=prestart
     {CLEAR_VARIABLE nfw_wounded}
+	{CLEAR_VARIABLE nfw_first_death}
 [/event]
 
 [event]
@@ -43,29 +44,9 @@
     id=nfw_catch_last_breath
     # This filter can contain a list of campaign-specific units that shouldn't be revived, at least not by this add-on. It's no problem if the nfw_exclude_unit_id variable isn't set, the mod still works.
     # This only matters if their death doesn't trigger an automatic defeat, and if the side that they're on will end up on the player's recall list.
-    [filter]
-        [not]
-            id=$nfw_exclude_unit_id
-        [/not]
-    [/filter]
-
-    [fire_event]
-        name=nfw_dialogue_on_death
-        [primary_unit]
-            id=$unit.id
-        [/primary_unit]
-    [/fire_event]
-
-    # This isn't limited to a particular side, because some campaigns have multiple persistent sides.
+	# This isn't limited to a particular side, because some campaigns have multiple persistent sides.
     # It isn't limited to player-controlled sides either, for example Olurf in LoW's 02_Hostile_Mountains.
-    [store_unit]
-        [filter]
-            {EVENT_UNIT}
-        [/filter]
-        mode=append
-        variable=nfw_wounded
-        kill=no
-    [/store_unit]
+	{NFW_CATCH_LAST_BREATH}
 [/event]
 
 # Text to inform the player that the unit was stored and how
